# mlab-server

./: .dockerignore  .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  runners_list.json
.github/workflows/: push-to-server.yml  tests.yml
deploy/: Dockerfile  docker-compose-db.yml  docker-compose.yml
server/: __main__.py  conftest.py  gunicorn_runner.py  settings.py
server/.github/workflows/: push-to-server.yml
server/db/: base.py  config.py  utils.py
server/db/migrations/: env.py
server/db/migrations/versions/: 2023-10-26-18-15_983074f56b96.py  2023-10-26-18-23_1db43412e9ca.py  2023-10-27-16-20_177c1b67883b.py  2023-10-27-17-16_b703dae66fbd.py  2023-10-27-20-00_49d2dde3b9ac.py  2023-10-31-09-40_9a8464a1824e.py  2023-10-31-09-50_0bbe9f2e35dc.py  2023-10-31-09-51_02e54ab59099.py  2023-11-01-07-58_43f94d00b9b3.py  2023-11-01-09-16_a92ecef31133.py  2023-11-01-09-31_6eca030f36af.py  2023-11-01-09-31_cc9ba23f7ec0.py  2023-11-01-09-59_abbc002029f9.py  2023-11-01-19-39_33a769e2fffc.py  2023-11-02-06-53_206387717e5b.py  2023-11-02-13-19_282e14b8e9d1.py  2023-11-02-13-25_65c2b22a6b96.py  2023-11-02-13-36_99e50031e5f3.py  2023-11-02-13-56_1ff6775ead1c.py  2023-11-02-14-49_dfd63bb3a281.py  2023-11-02-14-54_509e0902d0c6.py  2023-11-02-14-56_0a3c8adc2389.py  2023-11-02-19-45_22fc199c8bbb.py  2023-11-05-10-49_869fc9dba991.py  2023-11-05-11-10_38fc6ba80cf5.py  2023-11-06-21-36_1c76d0aa39c2.py  2023-11-06-21-41_5150ca9a7c17.py  2023-11-06-22-11_b53f1beb7206.py  2023-11-07-12-06_1dc009b384f7.py  2023-11-14-11-01_64d8215d633a.py  2023-11-14-11-02_27c53c66e746.py  2023-11-14-19-49_73d7cbeeaef2.py  2023-11-14-19-49_76a34fb90f44.py  2023-11-14-19-55_3d933c15dfd2.py  2023-11-15-10-26_14a570bbeae3.py  2023-11-16-08-13_3bc5ea60a221.py  2023-12-02-12-28_dab3cd304260.py  2024-01-16-14-11_4bc5706cee1a.py  2024-05-15-17-06_43f7bf2f431a.py  2024-05-17-23-28_1e6d68941d37.py  (+15 more)
server/db/models/: __init__.py  billings.py  datasets.py  iam.py  jobs.py  ml_models.py  results.py
server/services/: auth_bearer.py  cog.py
server/services/balancer/: balancer.py  queue.py  runner.py
server/services/git/: __init__.py  main.py
server/services/pymlab/: __init__.py  main.py  test.py  train.py
server/web/: application.py  lifetime.py  middleware.py  socket.py
server/web/api/: router.py  utils.py
server/web/api/billing/: dto.py  routes.py  service.py
server/web/api/datasets/: dto.py  routes.py  utils.py
server/web/api/iam/: routes.py  utils.py
server/web/api/jobs/: dto.py  routes.py  service.py  utils.py
server/web/api/models/: __init__.py  dto.py  get_all.py  routes.py
server/web/api/monitoring/: views.py
(+2 files in other folders)
