[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
gunicorn = "^21.2.0"
pydantic = { version = "^1", extras=["dotenv"] }
yarl = "^1.9.2"
ujson = "^5.8.0"
ormar = "^0.12.2"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"
redis = {version = "^4.6.0", extras = ["hiredis"]}
httptools = "^0.6.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
gitpython = "^3.1.43"
mlab-py = "^1.0.12"
python-gitlab = "^4.6.0"
pyjwt = "^2.8.0"
websockets = "^12.0"
python-socketio = "^5.11.2"
grpcio-tools = "^1.64.1"
mlab-pyprotos = {git = "https://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@github.com/Data-Intel-and-Swarm-Analytics-Lab/mlab-pyprotos.git"}



[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
fakeredis = "^2.5.0"
httpx = "^0.23.3"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["server",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "SERVER_ENVIRONMENT=pytest",
    "SERVER_DB_BASE=server_test",
]

[fastapi-template.options]
project_name = "server"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "server"
enable_routers = "None"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "None"
orm = "ormar"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "True"
gunicorn = "True"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
